k8s/argocd/portforlio-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app: portfolio
    environment: dev
