k8s/argocd/portforlio-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio
spec:
  type: LoadBalancer  # or ClusterIP if using Ingress
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: portfolio
